--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Sing In</title>
+    <title>Login</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/sign_in.css">
 </head>
