--- a/views/shortcuts.ejs
+++ b/views/shortcuts.ejs
@@ -13,27 +13,28 @@
 
     <article id="column2">
         
+        <h2>Customers</h2>
         <div id="container1">
 
         </div>
 
+        <h2>Loans</h2>
         <div id="container2">
             
         </div>
 
+        <h2>Shopping</h2>
         <div id="container3">
             
         </div>
-   
+
+        <h2>Movie</h2>   
         <div id="container4">
             
         </div>
 
+        <h2>Loan Rules</h2>
         <div id="container5">
-            
-        </div>
-
-        <div id="container6">
             
         </div>
 
