--- a/public/css/edit_client.css
+++ b/public/css/edit_client.css
@@ -32,13 +32,23 @@ body {
     color:white
 }
 
+#loans{
+    background-color: white;
+    color: black;
+}
+
+#blacklist{
+    background-color: white;
+    color: black;
+}
+
 div.contenedor{
     margin-top: 120px;
     margin-left: 589px;
     border-color: #f2edbe;
     border-style:solid;
     width: 225px;
-    height: 400px;
+    height: 500px;
     background-color: #2a628f;
     padding: 20px;
     text-align: center;
@@ -53,11 +63,31 @@ input{
     text-align: center;
 }
 
-button{
-    width: 200px;
+select{
+    width: 165;
+    height: 29;
+    margin-bottom: 20px;
+}
+
+#button1{
+    width: 135px;
     height: 35px;
-    background-color: #3d9796;
+    background-color: #f2edbe;
+    border-style: solid;
+    border-color: black;
+    color: black;
+    float: left; width: 50%;
+    margin-right: 10px;
+}
+
+#button2{
+    width: 55px;
+    height: 35px;
+    background-color: #cf2a27;
     border-style: solid;
     border-color: black;
     color: white;
+    float: left; width: 30%;
+    margin-left: 10px;
 }
+
