--- a/views/search_loans.ejs
+++ b/views/search_loans.ejs
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Search Loans</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="search_client.css" type="text/css">
 </head>
 
 <body>
+    <form id="header">
+        <input type="image" formaction="cart_summary.html" src="imagenes/shopping_cart.png" width="30" height="30" />
+        <input type="image" formaction="sign_up.html" src="imagenes/exit.png" width="30" height="30" />
+    </form>    
+
     <div class="contenedor">
-        <img src="imagenes/search_loans.png" width="307" height="120">        
+        <form>
+            <input type="image" formaction="loans.html" id="back" src="imagenes/go_back.png" width="24" height="24"> 
+        </form>
+
+        <center>
+            <img src="imagenes/search_loans.png" width="307" height="120">        
+        </center>
+
         <form>
             <input type="text" id="search" placeholder="search loans">
             <select id="by">
@@ -20,24 +31,33 @@
                 <option value="expired">Loan id</option>
                 <option value="on_time">Date</option>
             </select><br> 
+        </form>
 
+        <form>
             <input type="text" id="field_1" class="field left" readonly>
-            <input type="image" id=view_edit src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+    
             <input type="text" id="field_2" class="field left" readonly>
-            <input type="image" id=view_edit src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+    
             <input type="text" id="field_3" class="field left" readonly>
-            <input type="image" id=view_edit src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+    
             <input type="text" id="field_4" class="field left" readonly>
-            <input type="image" id=view_edit src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+    
             <input type="text" id="field_5" class="field left" readonly>
-            <input type="image" id=view_edit src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+    
             <input type="text" id="field_6" class="field left" readonly>
-            <input type="image" id=view_edit src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+    
             <input type="text" id="field_6" class="field left" readonly>
-            <input type="image" id=view_edit src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+    
             <input type="text" id="field_8" class="field left" readonly>
-            <input type="image" id=view_edit src="imagenes/view_edit.png" width="24" height="24"> <br>
-        </form> 
+            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+        </form>
     </div>
 </body>
 </html>
