--- a/public/css/edit_client.css
+++ b/public/css/edit_client.css
@@ -1,33 +1,63 @@
+@font-face {
+    font-family: "BalsamiqSansBold";
+    src: url("/fonts/balsamiqsansbold.eot");    
+    src: url("/fonts/balsamiqsansbold.woff");
+    src: url("/fonts/balsamiqsansbold.woff2");
+}
+
 body {
     background-color: #eafdf8;
 }
 
+#header{
+    margin-left: 1400px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+
+#back{
+    margin: 10px;
+    float: left;
+}
+
 #id_card{
+    width: 165px;
+    height: 20px;
     background-color: #aa4465;
     color: white;
 }
 
 #last_name{
+    width: 165px;
+    height: 20px;
     background-color: #eafdf8;
     color: black;
 }
 
 #first_name{
+    width: 165px;
+    height: 20px;
     background-color: #f2edbe;
     color:black;
 }
 
 #phone{
+    width: 165px;
+    height: 20px;
     background-color: #30323d;
     color:white;
 }
 
 #email{
+    width: 165px;
+    height: 20px;
     background-color: #eafdf8;
     color:black;
 }
 
 #address{
+    width: 165px;
+    height: 20px;
     background-color: #23395b;
     color:white
 }
@@ -43,30 +73,26 @@ body {
 }
 
 div.contenedor{
-    margin-top: 120px;
-    margin-left: 589px;
+    margin-top: 100px;
+    margin-left: 630px;
     border-color: #f2edbe;
     border-style:solid;
-    width: 225px;
+    width: 250px;
     height: 500px;
     background-color: #2a628f;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
 }
 
 input{
-    width: 165;
-    height: 29;
-    border-style: solid;
-    border-color: black;
-    margin-bottom: 20px;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 select{
-    width: 165;
-    height: 29;
-    margin-bottom: 20px;
+    width: 165px;
+    height: 29px;
+    margin-bottom: 10px;
 }
 
 #button1{
@@ -77,7 +103,8 @@ select{
     border-color: black;
     color: black;
     float: left; width: 50%;
-    margin-right: 10px;
+    margin-right: 30px;
+    margin-top: 10px;
 }
 
 #button2{
@@ -89,5 +116,6 @@ select{
     color: white;
     float: left; width: 30%;
     margin-left: 10px;
+    margin-top: 10px;
 }
 
