--- a/public/css/loan_details.css
+++ b/public/css/loan_details.css
@@ -1,69 +1,102 @@
+@font-face {
+    font-family: "BalsamiqSansBold";
+    src: url("/fonts/balsamiqsansbold.eot");    
+    src: url("/fonts/balsamiqsansbold.woff");
+    src: url("/fonts/balsamiqsansbold.woff2");
+}
+
 body {
     background-color: #eafdf8;
+}
+
+
+#header{
+    margin-left: 1400px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+
+#back{
+    margin: 10px;
+    float: left;
 }
 
 #loan{
     background-color: #eafdf8;
     color: black;
+    width: 200px;
+    height: 27px;
 }
 
 #status{
     background-color: #eafdf8;
     color: black;
+    width: 200px;
+    height: 27px;
 }
 
 #customer_details{
     background-color: #aa4465;
     color: white;
+    width: 200px;
+    height: 27px;
 }
 
 #paid{
     background-color: #eafdf8;
     color:black;
+    width: 200px;
+    height: 27px;
 }
 
 #from{
     background-color: #f2edbe;
     color:black;
+    width: 200px;
+    height: 27px;
 }
 
 #to{
     background-color: #30323d;
     color:white;
+    width: 200px;
+    height: 27px;
 }
 
 #address{
     background-color: #23395b;
-    color:white
+    color:white;
+    width: 200px;
+    height: 27px;
 }
 
 #loans{
     background-color: white;
     color: black;
+    width: 200px;
+    height: 27px;
 }
 
 #blacklist{
     background-color: white;
     color: black;
+    width: 200px;
+    height: 27px;
 }
 
 div.contenedor{
-    margin-top: 120px;
+    margin-top: 70px;
     margin-left: 589px;
     border-color: #f2edbe;
     border-style:solid;
     width: 255px;
-    height: 500px;
+    height: 550px;
     background-color: #2a628f;
     padding: 20px;
     text-align: center;
 }
 
 input{
-    width: 200px;
-    height: 27px;
-    border-style: solid;
-    border-color: black;
     margin-bottom: 10px;
     text-align: center;
 }
