--- a/public/css/movies.css
+++ b/public/css/movies.css
@@ -1,5 +1,13 @@
+@font-face {
+    font-family: "BalsamiqSansBold";
+    src: url("/fonts/balsamiqsansbold.eot");    
+    src: url("/fonts/balsamiqsansbold.woff");
+    src: url("/fonts/balsamiqsansbold.woff2");
+}
+
 body{
     background-color: #f2edbe;
+    font-family: BalsamiqSansBold;
 }
 
 #sideContainer{
@@ -9,43 +17,90 @@ body{
     text-align: right;
 }
 
+#first{
+    width: 206px;
+    height: 26px;
+    background-color: #3d9796;
+    border-style: solid;
+    border-color: black;
+    color: white;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    margin-right: 30px;
+    padding-left: 5px;
+}
+
+#second{
+    width: 136px;
+    height: 26px;
+    background-color: #3d9796;
+    border-style: solid;
+    border-color: black;
+    color: white;
+    margin-bottom: 5px;
+    margin-right: 100px;
+    padding-left: 5px;
+}
+
+#third{
+    width: 114px;
+    height: 26px;
+    background-color: #3d9796;
+    border-style: solid;
+    border-color: black;
+    color: white;
+    margin-bottom: 5px;
+    margin-right: 123px;
+    padding-left: 5px;
+}
+
 #mainContainer{
     margin-top: 100px;
     background-color: #30323d;
     border-style: solid;
 	float:left; width:40%;
     height: 550px;
+    opacity: 85%;
+}
+
+#header{
+    margin-left: 1400px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+
+#home{
+    margin: 10px;
 }
 
 #container0{
     margin-left: 40px;
     margin-bottom: 20px;
-    float:left; width:20%;
+    float:left; width:25%;
     height: 117px;
 	background:#30323d;
     text-align:left;
     color:white;
-    padding: 10px;
     font-size: 13px;
 }
 
 #container1{
-    margin-left: 80px;
+    margin-left: 30px;
     margin-bottom: 20px;
-    float:left; width:20%;
+    float:left; width:25%;
     height: 117px;
     border-style: solid;
     border-color: black;
 	background:#eafdf8;
     text-align:left;
     color:white;
-    padding: 10px;
     font-size: 13px;
 }
 
 #container2{
-	margin-left: 40px;
-    float:left; width:20%;
+    margin-left: 30px;
+    margin-bottom: 20px;
+    float:left; width:25%;
     height: 117px;
     border-style: solid;
     border-color: black;
@@ -57,15 +112,14 @@ body{
 }
 
 #container3{
-	margin-left: 30px;
-    float:left; width:60%;
+	margin-left: 40px;
+    float:left; width:56%;
     height: 117px;
     background:#3d9796;
     border-style: solid;
     border-color: black;
     text-align:left;
     color:white;
-    padding: 10px;
     font-size: 13px;
 }
 
@@ -78,7 +132,6 @@ body{
 	background:#aa4465;
     text-align:left;
     color:white;
-    padding: 10px;
     font-size: 13px;
 }
 
@@ -86,22 +139,4 @@ select{
     width: 212px;
     height: 17px;
     margin-bottom: 10px;
-}
-
-input{
-    width: 56px;
-    height: 27px;
-    border-style: solid;
-    border-color: black;    
-}
-
-button{
-    width: 400px;
-    height: 35px;
-    margin-top: 40px;
-    margin-left: 40px;
-    background-color: #f2edbe;
-    color:black;
-    border-style: solid;
-    border-color: black;
 }
