--- a/public/css/rules.css
+++ b/public/css/rules.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: "BalsamiqSansBold";
+    src: url("/fonts/balsamiqsansbold.eot");    
+    src: url("/fonts/balsamiqsansbold.woff");
+    src: url("/fonts/balsamiqsansbold.woff2");
+}
+
 body{
     background-color: #f2edbe;
 }
@@ -9,12 +16,71 @@ body{
     text-align: right;
 }
 
+#first{
+    width: 206px;
+    height: 26px;
+    background-color: #3d9796;
+    border-style: solid;
+    border-color: black;
+    color: white;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    margin-right: 30px;
+    padding-left: 5px;
+}
+
+#second{
+    width: 136px;
+    height: 26px;
+    background-color: #3d9796;
+    border-style: solid;
+    border-color: black;
+    color: white;
+    margin-bottom: 5px;
+    margin-right: 100px;
+    padding-left: 5px;
+}
+
+#third{
+    width: 114px;
+    height: 26px;
+    background-color: #3d9796;
+    border-style: solid;
+    border-color: black;
+    color: white;
+    margin-bottom: 5px;
+    margin-right: 123px;
+    padding-left: 5px;
+}
+
 #mainContainer{
     margin-top: 100px;
     background-color: #30323d;
     border-style: solid;
 	float:left; width:40%;
     height: 550px;
+    opacity: 85%;
+}
+
+#header{
+    margin-left: 1400px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+
+#home{
+    margin: 10px;
+}
+
+#options{
+    float:left; width:50%;
+    text-align:left;
+}
+
+#discount_tag{
+    float:left; width:40%;
+    text-align:left;
+    margin-left: 15px;
 }
 
 #container1{
@@ -76,20 +142,56 @@ select{
     margin-bottom: 10px;
 }
 
-input{
-    width: 56px;
-    height: 27px;
-    border-style: solid;
-    border-color: black;    
-}
-
 button{
     width: 400px;
     height: 35px;
-    margin-top: 40px;
-    margin-left: 40px;
     background-color: #f2edbe;
-    color:black;
+    margin-top: 20px;
+    margin-left: 40px;
+    border-color: black;
+    border-style: solid;
+}
+
+#min{
+    width: 56px;
+    height: 27px;
     border-style: solid;
     border-color: black;
+    margin-right: 20px;
+    margin-bottom: 10px;
+}
+
+#max{
+    width: 56px;
+    height: 27px;
+    border-style: solid;
+    border-color: black;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+#des{
+    width: 56px;
+    height: 27px;
+    border-style: solid;
+    border-color: black;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+#first_day_price{
+    width: 56px;
+    height: 27px;
+}
+
+#after_price{
+    width: 56px;
+    height: 27px;
+}
+
+#max_days{
+    width: 56px;
+    height: 27px;
 }
