--- a/public/css/search_client.css
+++ b/public/css/search_client.css
@@ -1,5 +1,23 @@
+@font-face {
+    font-family: "BalsamiqSansBold";
+    src: url("/fonts/balsamiqsansbold.eot");    
+    src: url("/fonts/balsamiqsansbold.woff");
+    src: url("/fonts/balsamiqsansbold.woff2");
+}
+
 body {
     background-color: #eafdf8;
+}
+
+#header{
+    margin-left: 1400px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+
+#back{
+    margin: 10px;
+    float: left;
 }
 
 #search{
@@ -103,12 +121,12 @@ select{
 }
 
 div.contenedor{
-    margin-top: 120px;
+    margin-top: 100px;
     margin-left: 450px;
     border-color: #f2edbe;
     border-style:solid;
     width: 650px;
-    height: 550px;
+    height: 600px;
     background-color: #2a628f;
     text-align: center;
 }
