--- a/views/add_client.ejs
+++ b/views/add_client.ejs
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <title>Add client</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="add_client.css" type="text/css">
 </head>
 
 <body>
+    <form id="header">
+        <input type="image" formaction="cart_summary.html" src="imagenes/shopping_cart.png" id="shopping" width="30" height="30" />
+        <input type="image" formaction="sign_up.html" src="imagenes/exit.png" id="exit" width="30" height="30" />
+    </form>
+
     <div class="contenedor">
-        <img src="imagenes/new_client.png" width="224" height="113">        
+        <form>
+            <input type="image" formaction="client.html" src="imagenes/go_back.png" id="back" width="30" height="30"/>    
+        </form>    
+
+        <center>
+            <img src="imagenes/new_client.png" width="224" height="113">        
+        </center>
+
         <form>
             <input type="text" id="id_card" placeholder="ID Card"><br>
             <input type="text" id="last_name" placeholder="Last name"><br>
             <input type="text" id="first_name" placeholder="First name"><br>
             <input type="text" id="phone" placeholder="Phone"><br>
             <input type="text" id="email" placeholder="Email"><br>
-            <input type="text" id="address" placeholder="Address"><br>
-            <button>Register</button> 
-        </form> 
-    </div>
+            <input type="text" id="address" placeholder="Address">
+            <button type="submit" formaction="client.html">Register</button>    
+        </form>
+    </div>      
 </body>
 </html>
