--- a/views/client.ejs
+++ b/views/client.ejs
@@ -5,38 +5,50 @@
 <title>Client</title>
 </head>
 <body>
+    <form id="header">
+        <input type="image" formaction="cart_summary.html" src="imagenes/shopping_cart.png" width="30" height="30" />
+        <input type="image" formaction="sign_up.html" src="imagenes/exit.png" width="30" height="30" />
+    </form>    
 
     <article id=sideContainer>
-        <img src="imagenes/retro_club.jpg" width="250" height="60">
+        <img src="imagenes/retro_club.jpg" width="250" height="60"><br>
+        <input type="text" id="first" readonly><br>
+        <input type="text" id="second" readonly><br>            
+        <input type="text" id="third" readonly><br>            
     </article> 
 
     <article id=mainContainer>
-        <center>
-            <img src="imagenes/customers.png" width="210" height="105">
-        </center>
+        <form>
+            <input type="image" formaction="shortcuts.html" src="imagenes/home.png" id="home" width="30" height="30"/><br>
 
-        <br>
-
-        <article id="container0">
-            <h3></h3>
-        </article>
+            <center>
+                <img src="imagenes/customers.png" width="210" height="105">
+            </center>
     
-        <button id="container1">
-            <h3>Add</h3>
-        </button>
+            <article id="container0">
+            </article>
+        
+            <button id="container1">
+            </button>
     
-        <br>
+            <button id="container2" formaction="add_client.html">
+                <h3>Add</h3>
+                <img src="imagenes/add_customer.png" width="55" height="50">
+            </button>
     
-        <button id="container2">
-            <h3>Search</h3>
-
-        </button>
-    
-        <button id="container3">
-
-        </button>
-    
+            <br>
+        
+            <button id="container3" formaction="search_client.html">
+                <h3>Search</h3>
+                <img src="imagenes/search_icon.png" width="40" height="40">
+                <img src="imagenes/eye.png" width="40" height="40">
+                <img src="imagenes/pencil.png" width="40" height="40">
+                <img src="imagenes/delete.png" width="40" height="40">
+            </button>
+        
+            <button id="container4">
+            </button>
+        </form>
     </article>
-
 </body>
 </html>
