--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -5,39 +5,50 @@
     <title>Movies</title>
 </head>
 <body>
+    <form id="header">
+        <input type="image" formaction="cart_summary.html" src="imagenes/shopping_cart.png" width="30" height="30" />
+        <input type="image" formaction="sign_up.html" src="imagenes/exit.png" width="30" height="30" />
+    </form>    
 
     <article id=sideContainer>
-        <img src="imagenes/retro_club.jpg" width="250" height="60">
+        <img src="imagenes/retro_club.jpg" width="250" height="60"><br>
+        <input type="text" id="first" readonly><br>
+        <input type="text" id="second" readonly><br>            
+        <input type="text" id="third" readonly><br>            
     </article> 
 
     <article id=mainContainer>
-        <center>
-            <img src="imagenes/rules.png" width="307" height="99">
-        </center>
+        <form>
+            <input type="image" formaction="shortcuts.html" src="imagenes/home.png" id="home" width="30" height="30"/><br>
 
-        <br>
-
-        <article id="container0">
-        </article>
-
-        <article id="container1">
-        </article>
-
-        <article id="container2">
-            <h3>Add</h3>
-        </article>
-
-        <br>
-   
-        <article id="container3">
-            <h3>Search</h3>
-
-        </article>
-         
-        <article id="container4">
-        </article>
-
+            <center>
+                <img src="imagenes/movies.png" width="307" height="99">
+            </center>
+     
+            <article id="container0">
+            </article>
+    
+            <article id="container1">
+            </article>
+    
+            <button id="container2" formaction="add_movie.html">
+                <h3>Add</h3>
+                <img src="imagenes/plus.png" width="55" height="50">
+            </button>
+    
+            <br>
+       
+            <button id="container3" formaction="search_movie.html">
+                <h3>Search</h3>
+                <img src="imagenes/search_icon.png" width="40" height="40">
+                <img src="imagenes/eye.png" width="40" height="40">
+                <img src="imagenes/pencil.png" width="40" height="40">
+                <img src="imagenes/minus.png" width="40" height="40">
+            </button>
+             
+            <article id="container4">
+            </article>
+        </form>
     </article>
-
 </body>
 </html>
