--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="sign_up.css" type="text/css">
+    <link rel="stylesheet" href="/css/sign_up.css" type="text/css">
 </head>
 
 <body>
