--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -7,7 +7,7 @@
 
 <body>
     <article id="column1">
-        <img src="imagenes/retro_club.jpg" width="330" height="75">
+        <img src="/images/titles/retro_club.jpg" width="330" height="75">
         <h2>
             Blurry streaming?<br>
             no problem<br>
@@ -16,11 +16,11 @@
     </article> 
 
     <article id="column2">
-        <img src="imagenes/sign_in.png" id="sign_in" width="270" height="140">
-        <form action="/sign" method="post">
-            <input type="text" id="username" placeholder="Username"><br>
-            <input type="password" id="password" placeholder="Password"><br><br>
-            <button type="submit" formaction="shortcuts.html">Sign in</button>
+        <img src="/images/titles/sign_in.png" id="sign_in" width="270" height="140">
+        <form action="/admin/home" method="post">
+            <input type="text" name="username" placeholder="Username"><br>
+            <input type="password" name="password" placeholder="Password"><br><br>
+            <button type="submit">Sign in</button>
         </form> 
     </article>  
 </body>
