--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -17,7 +17,7 @@
 
     <article id="column2">
         <img src="/images/titles/sign_in.png" id="sign_in" width="270" height="140">
-        <form action="/admin/home" method="post">
+        <form action="/login" method="post">
             <input type="text" name="username" placeholder="Username"><br>
             <input type="password" name="password" placeholder="Password"><br><br>
             <button type="submit">Sign in</button>
